# gateway

./: .gitignore  .gitmodules  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  aliases.mainnet.json  aliases.testnet.json  bos.config.json  package-lock.json  package.json  playwright.config.js  resources.md  vercel.json  webpack.config.js
.github/workflows/: continuous-integration.yml  contract-deploy-production.yml  contract-deploy-staging.yml  contract-test.yml  contract-undeploy-staging.yml  promote-develop-to-main.yml  release-mainnet.yml  release-new-mainnet.yml  release-new-testnet.yml  release-old-mainnet.yml  release-old-testnet.yml  release-testnet.yml  web4-deploy-mainnet.yml  web4-deploy-production.yml  web4-deploy-staging.yml  web4-deploy-testnet.yml  web4-test.yml  web4-undeploy-staging.yml
apps/builddao/: aliases.mainnet.json  aliases.testnet.json  bos.config.json  data.json
apps/buildhub/: bos.config.json
apps/every.near/: bos.config.json
apps/new/: bos.config.json
apps/old/: bos.config.json
config/: webpack.production.js
contract/: README.md
contract/src/: lib.rs
playwright-tests/: README.md
playwright-tests/storage-states/: admin-connected.json  mainnet-wallet-connected.json  wallet-connected-profile.json  wallet-connected-project-owner.json  wallet-connected.json
playwright-tests/tests/: auth.spec.js  (+14 more)
public/: _redirects  index.html  vercel.json
src/: App.js  App.jsx  index.css
web4contract/: Cargo.toml  README.md
web4contract/src/: lib.rs
web4contract/tests/: test_basics.rs
widget/: Index.jsx  Index.metadata.json
(+502 files in other folders)
